# jmd-impl

./: .gitignore  README.md  benchmark_xml.py  build_ext.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
jmd/: __init__.py  __main__.py  _cli.py  _cparser.c  _cparser.pyi  _cserializer.c  _cserializer.pyi  _delete.py  _error.py  _html.py  _parser.py  _query.py  _scalars.py  _schema.py  _serializer.py  _streaming.py  _tokenizer.py  xml.py
tests/: conftest.py  test_conformance.py  test_delete.py  test_error.py  test_modes.py  test_parser.py  test_query.py  test_roundtrip.py  test_schema.py  test_serializer.py  test_streaming.py  test_xml.py
